--- a/public/css/style.css
+++ b/public/css/style.css
@@ -272,3 +272,23 @@ select {
 .edit-btn:hover svg {
     fill: #000;
 }
+
+.filter-button{
+    text-align: center;
+    background-color: black; 
+    color: white;
+    font-weight: bold;
+    height: 50%;
+    border: 0;
+    padding: 10px;
+    border-radius: 3px;
+}
+
+.conteiner-filter{
+    display: flex; 
+    width: 100%; 
+    height:4rem;  
+    /* background-color: red;  */
+    align-items: center; 
+    justify-content: space-between;
+}
